tests/lox/errors/resolution_errors.lox
return;
fun bad() {
    var a = "first";
    var a = "second";
    var a = "baz";
}
{
    if (true) {
        var a = a + 1;
        return 1;
    }
}
// err: One or more errors occurred during resolving variables:
// err: [at column 1 in line 1] Cannot return from top-level code.
// err: [at column 9 in line 4] Already a variable with name a in this scope.
// err: [at column 9 in line 5] Already a variable with name a in this scope.
// err: [at column 17 in line 9] Cannot read a local variable in its own initializer.
// err: [at column 9 in line 10] Cannot return from top-level code.